# apihub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: dostavista.html  index.html  tk-kit.html
dostavista/: TODO.md  api_info.json  openapi.yaml
dostavista/llm/: GET_1.5_bank-cards_get.json  GET_1.5_client_get.json  GET_1.5_courier_get.json  GET_1.5_deliveries_get-list.json  GET_1.5_order_delivery-intervals.json  GET_1.5_order_get-list.json  GET_1.5_order_receipts.json  POST_1.5_deliveries_create-deliveries.json  POST_1.5_deliveries_delete-deliveries.json  POST_1.5_deliveries_edit-deliveries.json  POST_1.5_deliveries_make-deliveries-routes.json  POST_1.5_order_calculate-order.json  POST_1.5_order_cancel-order.json  POST_1.5_order_create-order.json  POST_1.5_order_edit-order.json
scripts/: QA.html  fetch_openapi_from_site.py  generate_llm_json.py  llm_optimized_documentation.html  tk_kit_scraper.py
tk-kit/: README.md  api_info.json  openapi.yaml
tk-kit/endpoints/: 1.0-geography-address-get-list.json  1.0-geography-city-get-list.json  1.0-geography-email-get-list.json  1.0-geography-phone-get-list.json  1.0-geography-schedule-get-list.json  1.0-geography-schedule-group-get-list.json  1.0-order-calculate-post.json  1.0-order-cargo-type-get-list.json  1.0-order-currency-get-list.json  1.0-order-document-get.json  1.0-order-get-list.json  1.0-order-get.json  1.0-order-mass-create.json  1.0-order-photo-get.json  1.0-order-service-get-list.json  1.0-order-status-get.json  1.0-order-time-delivery.json  1.0-profile-get-list.json  (+12 more)
(+60 files in other folders)
