[project]
name = "apihub"
version = "0.1.0"
description = "API documentations hub"
authors = [
    { name = "Meowy Pouncy", email = "rain.hides.pain@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pyyaml",
    "beautifulsoup4",
]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
